@@ -47,10 +47,10 @@ None
 cmd.get_names()
 []
 cmd.get_model("nonexistent")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 CmdException raised.
 cmd.space("cmyk")
@@ -71,10 +71,10 @@ chempy.models.Indexed
 chempy.models.Indexed
 0
 cmd.get_model("nonexistent")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 CmdException raised.
 cmd.create("test","none",quiet=0)
@@ -82,10 +82,10 @@ cmd.create("test","none",quiet=0)
  Executive: object "test" created.
 None
 cmd.create("test2","nonexistent")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "nonexistent".
 ( nonexistent )<--
 CmdException raised.
 cmd.create("test3","?allowed",quiet=0)
@@ -102,28 +102,28 @@ CmdException raised.
 cmd.distance("none","none","none")
 -1.0
 cmd.distance("none","invalid1","none")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid1".
 ( invalid1 )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid1".
 ( invalid1 )<--
 CmdException raised.
 cmd.distance("none","none","invalid2")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid2".
 ( invalid2 )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid2".
 ( invalid2 )<--
 CmdException raised.
 cmd.distance("none","invalid1","invalid2")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid1".
 ( invalid1 )<--
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid2".
 ( invalid2 )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid1".
 ( invalid1 )<--
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid2".
 ( invalid2 )<--
 CmdException raised.
 cmd.index("none")
@@ -131,10 +131,10 @@ cmd.index("none")
 cmd.index("first pept")
 [('pept', 1)]
 cmd.index("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 CmdException raised.
 cmd.identify("none")
@@ -142,10 +142,10 @@ cmd.identify("none")
 cmd.identify("first pept")
 [1]
 cmd.identify("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 CmdException raised.
 cmd.identify("none",mode=1)
@@ -153,10 +153,10 @@ cmd.identify("none",mode=1)
 cmd.identify("first pept",mode=1)
 [('pept', 1)]
 cmd.identify("invalid",mode=1)
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 CmdException raised.
 cmd.count_atoms("none")
@@ -166,10 +166,10 @@ cmd.count_atoms()
 cmd.count_atoms("pept")
 107
 cmd.count_atoms("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 CmdException raised.
 cmd.count_frames()
@@ -181,10 +181,10 @@ cmd.count_states("all")
 cmd.count_states("none")
 0
 cmd.count_states("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 CmdException raised.
 cmd.get_area()
@@ -194,7 +194,7 @@ cmd.get_area("resi 1")
 cmd.get_area("none")
 0.0
 cmd.get_area("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1.0
 cmd.get_chains()
@@ -206,10 +206,10 @@ cmd.get_chains("resi 1")
 cmd.get_chains("none")
 []
 cmd.get_chains("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 ( invalid )<--
 CmdException raised.
 cmd.zoom()
@@ -220,10 +220,10 @@ cmd.zoom("none")
 ExecutiveWindowZoom-Warning: selection doesn't specify any coordinates.
 None
 cmd.zoom("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 QuietException raised.
 cmd.center()
@@ -234,9 +234,9 @@ cmd.center("none")
 ExecutiveCenter-Warning: selection doesn't specify any coordinates.
 None
 cmd.center("invalid")
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 -1
-Selector-Error: Invalid Selection Name.
+Selector-Error: Invalid selection name "invalid".
 invalid<--
 QuietException raised.
