@@ -2,6 +2,13 @@
 CHANGE LOG
 =========================================================================
 
+2009-03-23 Warren L. DeLano <warren@delsci.com>	
+
+	* fixed selector bug parsing one+object as two + object
+
+	* added " + " selection operator to mitigate impact of bug
+	  and added " - " operator to provide complement to " + "
+	
 2009-03-21 Warren L. DeLano <warren@delsci.com>	
 
 	* added simple fasta output
